# ieee754_hrynda_pavlosiuk_denysova

./: CMakeLists.txt  README.md  main.cpp
include/: fp_convert.h
src/: fp_convert.cpp
tests/: fp_test.cpp  test_main.cpp
